crates/apollo-compiler/test_data/diagnostics/0075_merge_conflicting_args.txt
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:47:3]
    │
 46 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` provides one argument value here
 47 │   doesKnowCommand(dogCommand: HEEL)
    │   ────────────────┬────────────────  
    │                   ╰────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:47:3]
    │
 46 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` provides one argument value here
 47 │   doesKnowCommand(dogCommand: HEEL)
    │   ────────────────┬────────────────  
    │                   ╰────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:52:3]
    │
 51 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` provides one argument value here
 52 │   doesKnowCommand(dogCommand: $dogCommand)
    │   ────────────────────┬───────────────────  
    │                       ╰───────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:52:3]
    │
 51 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` provides one argument value here
 52 │   doesKnowCommand(dogCommand: $dogCommand)
    │   ────────────────────┬───────────────────  
    │                       ╰───────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:57:3]
    │
 56 │   doesKnowCommand(dogCommand: $varOne)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── field `doesKnowCommand` provides one argument value here
 57 │   doesKnowCommand(dogCommand: $varTwo)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:57:3]
    │
 56 │   doesKnowCommand(dogCommand: $varOne)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── field `doesKnowCommand` provides one argument value here
 57 │   doesKnowCommand(dogCommand: $varTwo)
    │   ──────────────────┬─────────────────  
    │                     ╰─────────────────── but a different value here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:62:3]
    │
 61 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` is selected with argument `dogCommand` here
 62 │   doesKnowCommand
    │   ───────┬───────  
    │          ╰───────── but argument `dogCommand` is not provided here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `doesKnowCommand`
    ╭─[0075_merge_conflicting_args.graphql:62:3]
    │
 61 │   doesKnowCommand(dogCommand: SIT)
    │   ────────────────┬───────────────  
    │                   ╰───────────────── field `doesKnowCommand` is selected with argument `dogCommand` here
 62 │   doesKnowCommand
    │   ───────┬───────  
    │          ╰───────── but argument `dogCommand` is not provided here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `isAtLocation`
    ╭─[0075_merge_conflicting_args.graphql:67:3]
    │
 66 │   isAtLocation(x: 0)
    │   ─────────┬────────  
    │            ╰────────── field `isAtLocation` is selected with argument `x` here
 67 │   isAtLocation(y: 0)
    │   ─────────┬────────  
    │            ╰────────── but argument `x` is not provided here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯
Error: operation must not provide conflicting field arguments for the same field name `isAtLocation`
    ╭─[0075_merge_conflicting_args.graphql:67:3]
    │
 66 │   isAtLocation(x: 0)
    │   ─────────┬────────  
    │            ╰────────── field `isAtLocation` is selected with argument `x` here
 67 │   isAtLocation(y: 0)
    │   ─────────┬────────  
    │            ╰────────── but argument `x` is not provided here
    │ 
    │ Help: Fields with the same response name must provide the same set of arguments. Consider adding an alias if you need to select fields with different arguments.
────╯

